--- a/css/style.css
+++ b/css/style.css
@@ -269,6 +269,14 @@ nav ul li {
 
 
 /*FOOTER*/
+.footer{
+    color: rgb(3, 37, 37);
+    text-align: center;
+    font-size: 20px;
+    height: 100%;
+    width: 100%;
+
+}
 
 .footer ul li{
     color: rgb(3, 37, 37);
